--- a/src/website/templates/website/about.html
+++ b/src/website/templates/website/about.html
@@ -4,7 +4,7 @@
 <section class="vendor_section sec_space_small aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
             <div class="container">
                <div class="vendor_image">
-                  <img src="{% static 'website/images/backgrounds/background (2).png' %}" alt="image_not_found">
+                  <img src="{% static 'website/images/backgrounds/about.png' %}" alt="image_not_found">
                </div>
                <h2 class="title_text">
                   Start Your Business With Multikart &amp; Reach Customers Across The
