--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,96 +10,87 @@
 
 
 {% block content %}
-<div class="breadcrumb-section">
+
+    <section class="login-page section-b-space">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="page-title">
-                        <h2>customer's login</h2>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">login</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </div>
-<section class="login-page section-b-space">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h3>Login</h3>
+            <div class="row justify-content-center my-4">
+                <div class="col-5 card my-4">
                     <div class="theme-card">
-                                                        <div class="p-2">
-                                {#                            <h1>{% trans "Sign In" %}</h1>#}
-                                {% get_providers as socialaccount_providers %}
+                        <div class="p-2">
+                            <h4 class="text-center mt-4">Login & Signup Form</h4>
 
-                                {% if socialaccount_providers %}
-                                    <p class="">{% blocktrans with site.name as site_name %}Please sign in with one
-                                        of your existing third party accounts. Or,
-                                        <a href="{{ signup_url }}"><b>Sign Up</b></a>
-                                        for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+                            <div class="btn-group my-4" role="group" style="border: 2px solid #e2e1e1"
+                                 aria-label="Basic example">
+                                <button type="button" class="btn btn-white">Login</button>
+                                <button type="button" class="btn custom_btn  text-white ">Signup</button>
+                            </div>
+                            <form class="login" id="login_form" method="POST" action="{% url 'account_login' %}">
 
-                                    {#                            <div class="socialaccount_ballot">#}
-                                    {##}
-                                    {#                                <ul class="socialaccount_providers">#}
-                                    {#                                    {% admin "socialaccount/snippets/provider_list.html" with process="login" %}#}
-                                    {#                                </ul>#}
-                                    {##}
-                                    {#                                <div class="login-or">{% trans '' %}</div>#}
-                                    {#                                <hr>#}
-                                    {##}
-                                    {#                            </div>#}
-                                    {##}
-                                    {#                            {% admin "socialaccount/snippets/login_extra.html" %}#}
+                                {% csrf_token %}
 
-                                {% else %}
-                                    <p>{% blocktrans %}If you have not created an account yet, then please
-                                        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-                                {% endif %}
-
-                                <form class="login" id="login_form" method="POST" action="{% url 'account_login' %}">
-
-                                    {% csrf_token %}
-
-                                    {{ form|crispy }}
-                                    {% if redirect_field_value %}
-                                        <input type="hidden" name="{{ redirect_field_name }}"
-                                               value="{{ redirect_field_value }}"/>
-                                    {% endif %}
-
-                                    <div class="mt-3">
-                                        <button class="btn btn-solid btn-block"
-                                                type="submit">Log In
-                                        </button>
+                                <div id="div_id_login" class="mb-3">
+                                    <label for="id_login" class="form-label requiredField">
+                                        Email<span class="asteriskField">*</span>
+                                    </label>
+                                    <input type="email" name="login"
+                                           placeholder="Email address" autocomplete="email"
+                                           class="textinput form-control"
+                                           required="" id="id_login">
+                                </div>
+                                <div id="div_id_password" class="mb-3">
+                                    <label for="id_password"
+                                           class="form-label requiredField">
+                                        Password<span class="asteriskField">*</span> </label>
+                                    <input type="password" name="password" placeholder="Password"
+                                           autocomplete="current-password"
+                                           class="passwordinput form-control" required="" id="id_password"
+                                    >
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div id="div_id_remember" class="mb-3 form-check">
+                                            <input type="checkbox" name="remember"
+                                                   class="checkboxinput form-check-input"
+                                                   id="id_remember">
+                                            <label for="id_remember" class="form-check-label">
+                                                Remember Me
+                                            </label>
+                                        </div>
                                     </div>
-                                </form>
-                                                                     <div class=" mt-4 text-center">
-                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i
-                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
+                                    <div class="col-6">
+                                        <div class="text-center">
+                                            <a href="{% url 'account_reset_password' %}" class="text-muted"><i
+                                                    class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
+                                        </div>
+                                    </div>
                                 </div>
 
+                                {% if redirect_field_value %}
+                                    <input type="hidden" name="{{ redirect_field_name }}"
+                                           value="{{ redirect_field_value }}"/>
+                                {% endif %}
 
+
+                                <div class="row">
+                                    <button type="submit" class="btn custom_btn  text-white ">Signup</button>
+                                </div>
+
+                            </form>
+                            <hr>
+                            <div class="row card p-2 mb-4 shadow">
+                                <button type="button" class="btn btn-white "><img
+                                        src="{% static 'website/images/google.png' %}" style="height:25px">&nbsp;&nbsp;Login
+                                    with Google
+                                </button>
                             </div>
 
-
-                    </div>
-                </div>
-                <div class="col-lg-6 right-login">
-                    <h3>New Customer</h3>
-                    <div class="theme-card authentication-right">
-                        <h6 class="title-font">Create A Account</h6>
-                        <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be
-                            able to order from our shop. To start shopping click register.</p><a href="{% url 'account_signup' %}" class="btn btn-solid">Create an Account</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
 {% endblock %}
 
