--- a/templates/website/include/sidebar.html
+++ b/templates/website/include/sidebar.html
@@ -75,8 +75,8 @@
                             </div>
                             <div class="sidebar_btns">
                                 <ul class="btns_group ul_li_block clearfix">
-                                    <li><a href="cart.html">View Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="{% url 'website:cart' %}">View Cart</a></li>
+                                    <li><a href="{% url 'website:order' %}">Checkout</a></li>
                                 </ul>
                             </div>
                         </div>
